// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinterEdgeCard renders nested production variant (default) with no header row — severity conveyed by left accent + tint 1`] = `
<View
  accessibilityRole="summary"
  style={
    [
      {
        "borderLeftWidth": 3,
        "borderTopColor": "#E5E7EB",
        "borderTopWidth": 1,
        "gap": 8,
        "paddingBottom": 12,
        "paddingLeft": 8,
        "paddingRight": 0,
        "paddingTop": 12,
      },
      {
        "backgroundColor": "#EF44440D",
        "borderLeftColor": "#EF4444",
      },
    ]
  }
>
  <Text
    style={
      {
        "color": "#374151",
        "fontSize": 14,
        "lineHeight": 20,
      }
    }
  >
    Two changes in this session put technician 5 into overlapping work on Mon, May 4: 10:00-11:00 and 10:30-11:30.
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 6,
      }
    }
  >
    <Text
      style={
        {
          "color": "#6B7280",
          "fontSize": 13,
          "fontWeight": "500",
        }
      }
    >
      Affects:
    </Text>
    <View
      accessibilityLabel="Open appointment 101"
      accessibilityRole="link"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={6}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="linter-edge-card-id-101"
    >
      <Text
        style={
          {
            "color": "#3B82F6",
            "fontSize": 13,
            "fontWeight": "600",
            "textDecorationLine": "underline",
          }
        }
      >
        #101,
      </Text>
    </View>
    <View
      accessibilityLabel="Open appointment 102"
      accessibilityRole="link"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={6}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="linter-edge-card-id-102"
    >
      <Text
        style={
          {
            "color": "#3B82F6",
            "fontSize": 13,
            "fontWeight": "600",
            "textDecorationLine": "underline",
          }
        }
      >
        #102
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "marginTop": 4,
      }
    }
  >
    <View
      accessibilityLabel="Apply suggested fix"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={6}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignSelf": "flex-start",
            "borderRadius": 10,
            "justifyContent": "center",
            "minHeight": 44,
            "paddingHorizontal": 14,
            "paddingVertical": 10,
          },
          {
            "backgroundColor": "#3B82F6",
          },
          false,
        ]
      }
      testID="linter-edge-card-autofix-time_conflict"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontSize": 16,
              },
              undefined,
              {
                "fontFamily": "material",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 14,
              "fontWeight": "700",
            }
          }
        >
          Apply suggested fix
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`LinterEdgeCard renders standalone error variant with kind label, humanMessage, affected IDs, and enabled CTA 1`] = `
<View
  accessibilityRole="summary"
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "borderWidth": 1,
        "elevation": 1,
        "gap": 10,
        "padding": 14,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 2,
      },
      {
        "borderColor": "#FCA5A5",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 10,
      }
    }
  >
    <View
      accessibilityLabel="Error: Error"
      accessibilityRole="text"
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 6,
            "paddingHorizontal": 10,
            "paddingVertical": 5,
          },
          {
            "backgroundColor": "#EF444420",
            "borderColor": "#EF4444",
          },
          false,
        ]
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 3,
              "height": 6,
              "width": 6,
            },
            {
              "backgroundColor": "#EF4444",
            },
          ]
        }
      />
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontSize": 13,
              "fontWeight": "600",
            },
            {
              "color": "#EF4444",
            },
            false,
          ]
        }
      >
        Error
      </Text>
    </View>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#111827",
          "flexShrink": 1,
          "fontSize": 14,
          "fontWeight": "700",
        }
      }
    >
      Time conflict
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#374151",
        "fontSize": 14,
        "lineHeight": 20,
      }
    }
  >
    Two changes in this session put technician 5 into overlapping work on Mon, May 4: 10:00-11:00 and 10:30-11:30.
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 6,
      }
    }
  >
    <Text
      style={
        {
          "color": "#6B7280",
          "fontSize": 13,
          "fontWeight": "500",
        }
      }
    >
      Affects:
    </Text>
    <View
      accessibilityLabel="Open appointment 101"
      accessibilityRole="link"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={6}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="linter-edge-card-id-101"
    >
      <Text
        style={
          {
            "color": "#3B82F6",
            "fontSize": 13,
            "fontWeight": "600",
            "textDecorationLine": "underline",
          }
        }
      >
        #101,
      </Text>
    </View>
    <View
      accessibilityLabel="Open appointment 102"
      accessibilityRole="link"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={6}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="linter-edge-card-id-102"
    >
      <Text
        style={
          {
            "color": "#3B82F6",
            "fontSize": 13,
            "fontWeight": "600",
            "textDecorationLine": "underline",
          }
        }
      >
        #102
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "marginTop": 4,
      }
    }
  >
    <View
      accessibilityLabel="Apply suggested fix"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={6}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignSelf": "flex-start",
            "borderRadius": 10,
            "justifyContent": "center",
            "minHeight": 44,
            "paddingHorizontal": 14,
            "paddingVertical": 10,
          },
          {
            "backgroundColor": "#3B82F6",
          },
          false,
        ]
      }
      testID="linter-edge-card-autofix-time_conflict"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text />
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 14,
              "fontWeight": "700",
            }
          }
        >
          Apply suggested fix
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`LinterEdgeCard renders standalone warning variant with no CTA when \`onApplyAutoFix\` is omitted 1`] = `
<View
  accessibilityRole="summary"
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "borderWidth": 1,
        "elevation": 1,
        "gap": 10,
        "padding": 14,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 2,
      },
      {
        "borderColor": "#FDE68A",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 10,
      }
    }
  >
    <View
      accessibilityLabel="Warning: Warning"
      accessibilityRole="text"
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 6,
            "paddingHorizontal": 10,
            "paddingVertical": 5,
          },
          {
            "backgroundColor": "#EAB30820",
            "borderColor": "#EAB308",
          },
          false,
        ]
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 3,
              "height": 6,
              "width": 6,
            },
            {
              "backgroundColor": "#EAB308",
            },
          ]
        }
      />
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontSize": 13,
              "fontWeight": "600",
            },
            {
              "color": "#EAB308",
            },
            false,
          ]
        }
      >
        Warning
      </Text>
    </View>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#111827",
          "flexShrink": 1,
          "fontSize": 14,
          "fontWeight": "700",
        }
      }
    >
      Fleet capacity exceeded
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#374151",
        "fontSize": 14,
        "lineHeight": 20,
      }
    }
  >
    Reassigning fleet 100's appointment to technician 9 would put them at 4/3 fleet jobs this week.
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 6,
      }
    }
  >
    <Text
      style={
        {
          "color": "#6B7280",
          "fontSize": 13,
          "fontWeight": "500",
        }
      }
    >
      Affects:
    </Text>
    <View
      accessibilityLabel="Open appointment 200"
      accessibilityRole="link"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={6}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="linter-edge-card-id-200"
    >
      <Text
        style={
          {
            "color": "#3B82F6",
            "fontSize": 13,
            "fontWeight": "600",
            "textDecorationLine": "underline",
          }
        }
      >
        #200
      </Text>
    </View>
  </View>
</View>
`;
